# Asta

./: .gitmodules  Build.sh  CMakeLists.txt  README.md  Run.sh  Test.sh
Asta/: CMakeLists.txt
Asta/libs/glad/: CMakeLists.txt
Asta/libs/glad/include/glad/: glad.h
Asta/libs/glad/src/: glad.c
Asta/src/: Asta.h
Asta/src/Asta/: Core.h  EntryPoint.h  GameConfig.h  Global.h
Asta/src/Asta/Containers/: dyn_array.c  dyn_array.h
Asta/src/Asta/Containers/Vector/: Vector.c  Vector.h
Asta/src/Asta/Core/Engine/: Engine.c  Engine.h
Asta/src/Asta/Core/Events/: Event.c  Event.h
Asta/src/Asta/Core/Platform/: Platform.c  Platform.h
Asta/src/Asta/Core/Window/: Window.c  Window.h
Asta/src/Asta/Renderer/: Renderer.c  Renderer.h
Asta/src/Asta/Renderer/gfxContext/ogl/: ogl.h
Asta/src/Asta/Renderer/gfxContext/vlkn/: vlkn.h
Asta/src/Asta/Util/Assert/: Assert.h
Asta/src/Asta/Util/Logger/: Logger.c  Logger.h
Asta/src/Asta/Util/Memory/: Memory.c  Memory.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Entry.c  Game.c  Game.h  main.c
tests/: CMakeLists.txt  test.c
tests/Containers/: CMakeLists.txt
tests/Containers/dyn_array/: CMakeLists.txt  dyn_array_get_field_test.c  dyn_array_init_test.c  dyn_array_insert_at_test.c  dyn_array_pop_at_test.c  dyn_array_pop_test.c  dyn_array_push_test.c  dyn_array_resize_test.c  dyn_array_set_field_test.c
tests/Memory/: CMakeLists.txt  memory_allocate_test.c  memory_copy_test.c  memory_free_test.c  memory_init_test.c  memory_set_test.c  memory_zero_test.c
